basic html framed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
 </head>
 <body>
 <!--  setup framework -->
-
+<div class="container-flud">
+  <div class="row">
+      <div id=headerCol class="col-12">Header Row</div>
+  </div>    
+  <div id =centerGameRow class="row">
+    <div id=left/TopFrame class="col-xs12-md3"></div>
+    <div class="col-xs12-md6"></div>
+      <div id =numberRow class="row">Random Number</div>
+      <div id =titleRow class="row">Title</div>
+      <div id =titleRow class="row">Title</div>
+          <div id=gem1 class="col-3"></div>
+          <div id=gem2 class="col-3"></div>
+          <div id=gem3 class="col-3"></div>
+          <div id=gem4 class="col-3"></div>
+    <div id=right/BottomFrame class="col-xs12-md3"></div>
+  </div>
+  <div class="row">
+      <div class="col-12"></div>
+  </div>
+</div>  
 
 
 
@@ -20,6 +39,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
 
 
+<div> 
+</div>
+        
+</nav>
 </body>
 </html>
 
