fixed HTML framework, added images

--- a/index.html
+++ b/index.html
@@ -11,21 +11,35 @@
 </head>
 <body>
 <!--  setup framework -->
-<div class="container-flud">
+<div class="container-fluid">
   <div class="row">
-      <div id=headerCol class="col-12">Header Row</div>
+      <div id="header-col" class="col-12">Header Row</div>
   </div>    
-  <div id =centerGameRow class="row">
-    <div id=left/TopFrame class="col-xs12-md3"></div>
-    <div class="col-xs12-md6"></div>
-      <div id =numberRow class="row">Random Number</div>
-      <div id =titleRow class="row">Title</div>
-      <div id =titleRow class="row">Title</div>
-          <div id=gem1 class="col-3"></div>
-          <div id=gem2 class="col-3"></div>
-          <div id=gem3 class="col-3"></div>
-          <div id=gem4 class="col-3"></div>
-    <div id=right/BottomFrame class="col-xs12-md3"></div>
+  <div id="game-row" class="row">
+    <div id="left/TopFrame" class="col-3">picture of caves</div>
+    <div id=game-column class="col-6">
+      <div id ="numberRow" class="row">Random Number
+        <div class="col-12"></div>
+      </div>
+      <div id ="titleRow" class="row">
+        <div class="col-12">Title</div>
+      </div>
+      <div id ="gemRow" class="row">
+          <div id="gem1" class="col-3">
+              <img src="assets/images/emerald.jpg" class="img-thumbnail" alt="emerald" width="100" height="auto"> 
+          </div>
+          <div id="gem2" class="col-3">
+            <img src="assets/images/sapphire.jpg" class="img-thumbnail" alt="sapphire" width="100" height="auto"> 
+          </div>
+          <div id="gem3" class="col-3"> 
+            <img src="assets/images/diamond.jpg" class="img-thumbnail" alt="diamond" width="100" height="auto"> 
+          </div>
+          <div id="gem4" class="col-3">
+            <img src="assets/images/ruby.jpg" class="img-thumbnail" alt="ruby" width="100" height="auto"> 
+          </div>
+        </div>
+        </div>
+    <div id="right/BottomFrame" class="col-3">picture of caves</div>
   </div>
   <div class="row">
       <div class="col-12"></div>
