minor formatting changes to HTML and framing images added

--- a/index.html
+++ b/index.html
@@ -16,33 +16,38 @@
       <div id="header-col" class="col-12">Header Row</div>
   </div>    
   <div id="game-row" class="row">
-    <div id="left/TopFrame" class="col-3">picture of caves</div>
-    <div id=game-column class="col-6">
+    <div id="left/TopFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3"> 
+      <img src="assets/images/crystal_cave_bkgd.jpg"  width="100%" height="auto" alt="cave background"> 
+    </div>
+
+    <div id=game-column class="col-xs-12col-sm-6 col-md-6 col-lg-6">
       <div id ="numberRow" class="row">Random Number
         <div class="col-12"></div>
       </div>
       <div id ="titleRow" class="row">
-        <div class="col-12">Title</div>
+        <div class="col-12">Title__________________________________________________Title</div>
       </div>
       <div id ="gemRow" class="row">
-          <div id="gem1" class="col-3">
-              <img src="assets/images/emerald.jpg" class="img-thumbnail" alt="emerald" width="100" height="auto"> 
+          <div id="gem1" class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+              <img src="assets/images/emerald.jpg" alt="emerald" width="100" height="auto"> 
           </div>
-          <div id="gem2" class="col-3">
-            <img src="assets/images/sapphire.jpg" class="img-thumbnail" alt="sapphire" width="100" height="auto"> 
+          <div id="gem2" class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <img src="assets/images/sapphire.jpg" alt="sapphire" width="100" height="auto"> 
           </div>
-          <div id="gem3" class="col-3"> 
-            <img src="assets/images/diamond.jpg" class="img-thumbnail" alt="diamond" width="100" height="auto"> 
+          <div id="gem3" class="col-xs-6 col-sm-6 col-md-3 col-lg-3"> 
+            <img src="assets/images/diamond.jpg" alt="diamond" width="100" height="auto"> 
           </div>
-          <div id="gem4" class="col-3">
-            <img src="assets/images/ruby.jpg" class="img-thumbnail" alt="ruby" width="100" height="auto"> 
+          <div id="gem4" class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
+            <img src="assets/images/ruby.jpg" alt="ruby" width="100" height="auto"> 
           </div>
         </div>
         </div>
-    <div id="right/BottomFrame" class="col-3">picture of caves</div>
+    <div id="right/BottomFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+      <img src="assets/images/crystal_cave_bkgd.jpg"  width="100%" height="auto" alt="cave background">
+    </div>
   </div>
   <div class="row">
-      <div class="col-12"></div>
+      <div class="col-12">maybe I'll put a pretty footer here</div>
   </div>
 </div>  
 
