apparently finally linked js file to html, created random number generators and wrote first to page.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id=game-column class="col-xs-12col-sm-6 col-md-6 col-lg-6">
       <div id ="numberRow" class="row ">
-        <div  class="col-12 text-center">  <h1>The computer wants you to match:<span class="badge badge-danger" id="RandomNumber">0</span></a><br></h1></div>
+        <div  class="col-12 text-center">  <h1>The computer wants you to match:<span class="badge badge-danger" id="randomnumber">0</span></a><br></h1></div>
       </div>
       <div id ="titleRow" class="row">
         <div id=gemcolumn class="col-12 jumbotron text-center">
@@ -62,11 +62,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
+<script src="assets/javascript/game.js"></script>
 
-
-<div> 
-</div>
-        
+       
 </nav>
 </body>
 </html>
