revised to make each crystal both separate and fixed value per game. got emerald working, still need to conform the rest and restart game at appropriate point.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--  setup framework -->
 <div class="container-fluid">
   <div class="row">
-      <div id="header-col" class="col-12 text-center">Header Row</div>
+      <div id="header-col" class="col-12 text-center">Crystal Match</div>
   </div>    
   <div id="game-row" class="row">
     <div id="left/TopFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3"> 
@@ -50,11 +50,11 @@
         </div>
     <div id="right/BottomFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
       <img src="assets/images/crystal_cave_bkgd.jpg"  width="100%" height="100%" alt="cave background">
-      <button type="button" class="btn btn-primary centered">Losses<span class="badge" id="LossesHTML">0</span></button>
+      <button type="button" class="btn btn-primary centered">Losses<span class="badge" id="lossesHTML">0</span></button>
     </div>
   </div>
   <div class="row">
-      <div id=crystal-value class="col-12 text-center"> <h1>Your total crystal value so far:<span class="badge badge-danger">0</span></a><br></h1></div>
+      <div  class="col-12 text-center"> <h1>Your total crystal value so far:<span id=crystal-value class="badge badge-danger">0</span></a><br></h1></div>
 </div>  
 
 
