everything but the kitchen sink. All code working, now possibly more css styling to make it more responsive.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="game-row" class="row">
     <div id="left/TopFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3"> 
       <img src="assets/images/crystal_cave_bkgd.jpg"  width="100%" height="100%" alt="cave background"> 
-      <button type="button" class="btn btn-primary centered">Wins<span class="badge" id="WinsHTML">0</span></button>
+      <button type="button" class="btn btn-primary centered">Wins<span class="badge" id="winsHTML">0</span></button>
     </div>
 
     <div id=game-column class="col-xs-12col-sm-6 col-md-6 col-lg-6">
@@ -30,7 +30,7 @@
           <h1>CRYSTAL-MATCH</h1>
         <h2>"The blackjack (well, sort of) of random crystal values."</h2>
         <br></br>
-        <p>Just click on a crystal and watch the magic, as your crystals' value is tallied against the computer's offer. If they match, you win. Don't worry, the picture tells you absolutely nothing at all about the actual value of the crystal.This is just a guessing game.</p>
+        <p>Just click on a crystal and watch the magic, as your crystals' value is tallied against the computer's offer. If they match, you win. Don't worry, the picture tells you absolutely nothing at all about the actual value of the crystal.This is just a guessing/memory game.</p>
         </div>
       </div>
       <div id ="gemRow" class="row">
