still tweaking the alignment/sizing of the frame pictures

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div class="row">
       <div id="header-col" class="col-12 text-center">Crystal Match</div>
   </div>    
-  <div id="game-row" class="row">
-    <div id="left/TopFrame" class="col-xs-12 col-sm-6 col-md-3 col-lg-3"> 
+  <div id="game-row" class="row-centered">
+    <div id="left/TopFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center"> 
       <img src="assets/images/crystal_cave_bkgd.jpg"  width="100%" height="100%" alt="cave background"> 
       <button type="button" class="btn btn-primary centered">Wins<span class="badge" id="winsHTML">0</span></button>
     </div>
 
-    <div id=game-column class="col-xs-12col-sm-6 col-md-6 col-lg-6">
+    <div id=game-column class="col-xs-12col-sm-12 col-md-6 col-lg-6">
       <div id ="numberRow" class="row ">
         <div  class="col-12 text-center">  <h1>The computer wants you to match:<span class="badge badge-danger" id="randomnumber">0</span></a><br></h1></div>
       </div>
@@ -47,7 +47,7 @@
           </div>
         </div>
         </div>
-    <div id="right/BottomFrame" class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+    <div id="right/BottomFrame" class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center">
       <img src="assets/images/crystal_cave_bkgd.jpg"  width="100%" height="100%" alt="cave background">
       <button type="button" class="btn btn-primary centered">Losses<span class="badge" id="lossesHTML">0</span></button>
     </div>
